--- a/mkstowe/templates/projects.html
+++ b/mkstowe/templates/projects.html
@@ -12,14 +12,14 @@
 
     <div class="seg">
         <h2>Project Variegata</h2>
-        <h3>C#, Unity</h3>
+        <h3>Python, Flask, (more technologies to be determined)</h3>
         <h4>In Progress</h4>
 
         <p>Independent research project conducted under Austin Yarger. The goal is to explore how machine learning can
-            be used to create unique narratives in a video game.</p>
+            be used to create unique stories and narratives in a video game by automatically structuring a tree of
+            relevant events based on what is currently happening to the player.</p>
 
-        <p>Read more and get updates on my
-        <a href="/projects/variegata/">Project Variegata blog</a>.</p>
+        <p>Read more and get updates on my <a href="/projects/variegata/">Project Variegata blog</a>.</p>
     </div>
     <div class="seg">
         <h2>Mission O-Possumble</h2>
