--- a/mkstowe/static/css/main.css
+++ b/mkstowe/static/css/main.css
@@ -207,6 +207,19 @@ figure {
   display: none;
 }
 
+.excerpt {
+  margin-left: 50px;
+  padding-left: 20px;
+  border-left: 5px solid rgba(175, 175, 175, 0.7);
+}
+.excerpt .code {
+  font-family: monospace;
+  list-style-type: none;
+}
+.excerpt .code li {
+  margin-bottom: 15px;
+}
+
 @media all and (min-width: 480px) {
   header {
     font-size: 20px;
