--- a/mkstowe/templates/cloud.html
+++ b/mkstowe/templates/cloud.html
@@ -2,6 +2,15 @@
     <h2>Project Cloud</h2>
 
     <div class="seg">
-        <p>Come back later for the first post!</p>
+        <p>Project Cloud is an FPS Action-Adventure game made in Unity by WolverineSoft Studio within the Unviersity
+            of Michigan. Immersed in a world inspired by Greek mythology, the player takes on the role of Hermes and
+            must explore the Cloud Interior - a giant cave-like system in the sky - to discover why clouds have
+            stopped producing rain. Along the way, Hermes must fight unique creatures and solve the problem at hand
+            in order to bring much needed rain back to the people of Earth.</p>
+    </div>
+
+    <div class="seg">
+        <h3>Sprints</h3>
+        <p><a href="/projects/cloud/Pre-Alpha/">Pre-Alpha</a></p>
     </div>
 </div>
