--- a/mkstowe/static/css/main.css
+++ b/mkstowe/static/css/main.css
@@ -83,6 +83,12 @@ img {
   margin: 0 auto;
 }
 
+video {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+}
+
 footer {
   display: block;
   position: fixed;
@@ -218,6 +224,23 @@ figure {
 }
 .excerpt .code li {
   margin-bottom: 15px;
+}
+
+table {
+  border-collapse: collapse;
+}
+table th {
+  text-align: left;
+}
+table td {
+  padding-right: 50px;
+  padding-top: 10px;
+}
+table tr:last-child td {
+  border-top: 3px solid black;
+}
+table .spacer {
+  padding-top: 20px;
 }
 
 @media all and (min-width: 480px) {
