--- a/mkstowe/templates/master.html
+++ b/mkstowe/templates/master.html
@@ -7,7 +7,7 @@
     <title>{{ title }} | Michael Stowe</title>
 
     <link rel="icon" href="{{ url_for('static', filename='media/favicon.png') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main_v1.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/normalize.css') }}">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
