March 3 post variegata post

--- a/mkstowe/templates/variegata.html
+++ b/mkstowe/templates/variegata.html
@@ -10,6 +10,7 @@
             necessarily the same.</p>
     </div>
     <div class="seg">
+        <p><a href="/projects/variegata/2021/03/03/">March 3: Search Engine and Graphs</a></p>
         <p><a href="/projects/variegata/2021/02/17/">February 17: Keyword Extraction</a></p>
         <p><a href="/projects/variegata/2021/02/10/">February 10: Initial Experiments</a></p>
         <p><a href="/projects/variegata/2021/02/03/">February 3: Research, Markets, and Stakeholders</a></p>
