--- a/mkstowe/templates/cloud.html
+++ b/mkstowe/templates/cloud.html
@@ -11,6 +11,7 @@
 
     <div class="seg">
         <h3>Sprints</h3>
-        <p><a href="/projects/cloud/Pre-Alpha/">Pre-Alpha</a></p>
+        <p><a href="/projects/cloud/Pre-Alpha-II/">Pre-Alpha II</a></p>
+        <p><a href="/projects/cloud/Pre-Alpha-I/">Pre-Alpha I</a></p>
     </div>
 </div>
